// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Program Info Section renders logo when present in props 1`] = `
.c0.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  margin-top: 2rem;
  position: relative;
}

.c1.c1 {
  position: absolute;
  top: -80px;
}

.c2.c2 {
  grid-column: 1 / span 12;
  background-color: #303641;
}

<section
  className="c0"
  data-cy="program-info-section"
>
  <div
    className="c1"
    id="program-info"
  />
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridColumn": "1 / span 7",
      }
    }
  >
    <a
      href="#program-info"
    >
      <h2>
        Program Info
      </h2>
    </a>
  </div>
  <div
    className="c2"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": "0.618",
            "justifyContent": "center",
            "padding": "1rem",
          }
        }
      >
        <div
          data-cy="campaign-logo"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <img
            alt="logo"
            fluid={
              Object {
                "aspectRatio": 1.014388489208633,
                "base64": "data:image/png;base64,iVBOR",
                "originalImg": "/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png",
                "originalName": "aces_logo.png",
                "presentationHeight": 139,
                "presentationWidth": 141,
                "sizes": "(max-width: 141px) 100vw, 141px",
                "src": "/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png",
                "srcSet": "/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png 141w",
                "srcSetWebp": "/static/070840eb6299020cd65fd46e27c54400/36436/aces_logo.webp 141w",
                "srcWebp": "/static/070840eb6299020cd65fd46e27c54400/36436/aces_logo.webp",
                "tracedSVG": "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'",
              }
            }
            src="test-image.png"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "display": "grid",
            "flex": "2.618",
            "gap": "1.5rem",
            "gridTemplateColumns": "minmax(0,1fr) minmax(0,1fr) minmax(0,1fr)",
            "padding": "2rem",
          }
        }
      >
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Agency
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program Lead
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Principle Investigator(s)
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Data Manager / Technical Contact
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            NASA Data Repository
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Partner Organizations
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Publication Overview
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Program Info Section renders placeholder when no logo is available 1`] = `
.c0.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  margin-top: 2rem;
  position: relative;
}

.c1.c1 {
  position: absolute;
  top: -80px;
}

.c2.c2 {
  grid-column: 1 / span 12;
  background-color: #303641;
}

<section
  className="c0"
  data-cy="program-info-section"
>
  <div
    className="c1"
    id="program-info"
  />
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridColumn": "1 / span 7",
      }
    }
  >
    <a
      href="#program-info"
    >
      <h2>
        Program Info
      </h2>
    </a>
  </div>
  <div
    className="c2"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": "0.618",
            "justifyContent": "center",
            "padding": "1rem",
          }
        }
      >
        <svg
          height="120"
          viewBox="0 0 80 80"
          width="120"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.378 70.315l1.767 1.767-4.879 4.877 3.301.001v2.5H0v-7.567h2.5v3.298l4.878-4.876zM61.917 3.45L76.01 17.543 58.835 34.718l-6.163-6.162-2.308 2.308 8.799 8.798c3.203-.678 5.87-.124 7.605 1.613l.885.885L55.79 54.022l1.107 1.108a3.986 3.986 0 014.593.74 3.982 3.982 0 010 5.62 3.957 3.957 0 01-2.81 1.163 3.962 3.962 0 01-2.81-1.163 3.985 3.985 0 01-.74-4.593l-1.107-1.107-11.866 11.865-.882-.885c-1.775-1.775-2.26-4.498-1.613-7.606l-8.801-8.801-2.308 2.308 6.165 6.164L17.542 76.01 3.45 61.917l17.175-17.175 6.161 6.162 2.308-2.308-7.279-7.278L26.35 26.35l14.965-4.535 7.28 7.28 2.308-2.308-6.163-6.162L61.917 3.45zM20.624 48.278l-13.64 13.64 10.558 10.557 13.64-13.64-4.397-4.396L15.037 66.19l-1.767-1.767L25.019 52.67l-4.394-4.393zm49.61 14.392v2.5l-3.298-.001 4.876 4.876-1.768 1.767-4.878-4.877v3.3h-2.5V62.67h7.568zm-8.572-20.78c-.978 0-2.078.185-3.26.555-3.223 1.01-6.666 3.235-9.693 6.265-5.33 5.332-7.97 11.875-6.392 15.25L63.95 42.327c-.645-.292-1.415-.437-2.288-.437zM58.68 57.208c-.377 0-.755.145-1.042.43a1.48 1.48 0 000 2.084c.577.578 1.51.578 2.084 0a1.476 1.476 0 000-2.084 1.479 1.479 0 00-1.042-.43zM40.608 24.642l-12.253 3.713L24.64 40.61l15.84 15.838c.278-.719.61-1.448.991-2.183l-8.753-8.755 1.767-1.77 8.292 8.296a31.898 31.898 0 014.166-5.093c2.94-2.94 6.273-5.202 9.506-6.46l-15.841-15.84zM30.684 39.94l2.31 2.313-1.767 1.767-2.31-2.31 1.767-1.77zM61.917 6.985l-13.642 13.64 4.395 4.394L64.42 13.27l1.77 1.768-11.75 11.75 4.395 4.395 13.64-13.64L61.918 6.985zM79.46 0v7.567h-2.5V4.265l-4.877 4.88-1.768-1.767L75.19 2.5h-3.297V0h7.567z"
            fill="#FFF"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "display": "grid",
            "flex": "2.618",
            "gap": "1.5rem",
            "gridTemplateColumns": "minmax(0,1fr) minmax(0,1fr) minmax(0,1fr)",
            "padding": "2rem",
          }
        }
      >
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Agency
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Funding Program Lead
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Principle Investigator(s)
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Data Manager / Technical Contact
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            NASA Data Repository
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Partner Organizations
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
              }
            }
          >
            Publication Overview
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;
